--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Modern Programming for Data Analytics - TITLE HERE</title>
+		<title>Modern Programming for Data Analytics - Class Slides</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -21,7 +21,18 @@
 		<div class="reveal">
                   <div class="slides">
 		    <section id="titleSlide">
-			<h2> Modern Programming for Data Analytics - TITLE HERE </h2>
+			<h2> Modern Programming for Data Analytics - Class Slides </h2>
+		    </section>
+		    <section>
+			    <h3>Your Name</h3>
+			    <ul>
+		              <li>Your nome town
+			      <li>Your major
+		              <li>Favorite movie
+		  	     </ul>
+		    </section>
+		    <section>
+			    copy above and fill in
 		    </section>
 		  </div>
 		</div>
