--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Your Name</h3>
+			    <h3>Xiantong Xin</h3>
 			    <ul>
-		              <li>Your nome town
-			      <li>Your major
-		              <li>Favorite movie
+		              <li>Changchun
+			      <li>Biology
+		              <li>Interstella
 		  	     </ul>
 		    </section>
 		    <section>
