--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			    copy above and fill in
+			    <h3>Ellie Lai</h3>
+			    <ul>
+				<li>Knoxville, TN
+				<li>Biological Sciences PhD
+				<li>Ocean's Eleven
+			    </ul>
 		    </section>
 		  </div>
 		</div>
