--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			    <h3>Ellie Lai</h3>
 			    <ul>
 				<li>Knoxville, TN
-				<li>Biological Sciences PhD
+				<li>Biochemistry
 				<li>Ocean's Eleven
 			    </ul>
 		    </section>
