--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			    copy above and fill in
+			    <h3>Eddie Piechowicz</h3>
+			    <ul>
+		              <li>Pottstown
+			      <li>Data Analytics for Science
+		              <li>Shawshank Redemption
+		  	     </ul>
+			    
 		    </section>
 		  </div>
 		</div>
