Edited index with my details

--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Xiantong Xin</h3>
+			    <h3>Manish Sainani</h3>
 			    <ul>
-		              <li>Changchun
-			      <li>Biology
-		              <li>Interstella
+		              <li>Mumbai
+			      <li>Energy Science, Technology & Policy
+		              <li>Dil Chahta Hai 
 		  	     </ul>
-		    </section>
-		    <section>
-			    copy above and fill in
 		    </section>
 		  </div>
 		</div>
