--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		    <section>
 			    <h3>Manish Sainani</h3>
 			    <ul>
-		              <li>Mumbai
+		              <li>Mumbai, India
 			      <li>Energy Science, Technology & Policy
 		              <li>Dil Chahta Hai 
 		  	     </ul>
