--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Manish Sainani</h3>
+			    <h3>Your Name</h3>
 			    <ul>
-		              <li>Mumbai
-			      <li>Energy Science, Technology & Policy
-		              <li>Dil Chahta Hai 
+		              <li>Your nome town
+			      <li>Your major
+		              <li>Favorite movie
 		  	     </ul>
 		    </section>
+		    <section>
+			    copy above and fill in`</section>
 		  </div>
 		</div>
 
