Fixed issue where my name wasn't there. Whoops

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			    <h3>Your Name</h3>
+			    <h3>Alex Fogelson</h3>
 			    <ul>
 				<li> Arlington, VA
 				<li> Math and CS
