--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			    copy above and fill in`</section>
+			    <h3>Zhen (Jack) Liu</h3>
+			    <ul>
+		              <li>Xiaogan, China
+			      <li>Chemistry
+		              <li>Titanic
+		  	     </ul>
+			</section>
 		  </div>
 		</div>
 
