restore index.html

--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			    <h3>Zhen (Jack) Liu</h3>
-			    <ul>
-		              <li>Xiaogan, China
-			      <li>Chemistry
-		              <li>Titanic
-		  	     </ul>
+				copy and paste yours
 			</section>
 		  </div>
 		</div>
