--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Your name</h3>
+			    <h3>Syed Zia Uddin</h3>
 			    <ul>
-		              <li>Your hometown
-			      <li>Your major
-		              <li>Your favorite moview
+		              <li>Gouripur, a small town in Bangladesh
+			      <li>Mechanical Engineering
+		              <li>Shawshank's Redemption
 		  	     </ul>
 		    </section>
 		    <section>
