--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		  	     </ul>
 		    </section>
 		    <section>
-				copy and paste yours
+				<h3>Makino</h3>
+			    <ul>
+		              <li>Changchun
+			      <li>Biology
+		              <li>Interstella
+		  	     </ul>
 			</section>
 		  </div>
 		</div>
