--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		  	     </ul>
 		    </section>
 		    <section>
-				copy and paste yours
+				<h3>Hwankyu Song</h3>
+			    <ul>
+		              <li> Bayside, NY
+			      <li> Data Analytics for Science
+		              <li> Good Will Hunting
+		  	     </ul>
 			</section>
 		  </div>
 		</div>
