added info to slide

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		  	     </ul>
 		    </section>
 		    <section>
-				copy and paste yours
+                            <h3>Jonathan</h3>
+                            <ul>
+                              <li>San Diego, CA
+                              <li>Data Analytics for Science
+                              <li>Boomerang
+                             </ul>
 			</section>
 		  </div>
 		</div>
