--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
 		  	     </ul>
 		    </section>
 		    <section>
-				<h3>Hwankyu Song</h3>
-			    <ul>
-		              <li> Bayside, NY
-			      <li> Data Analytics for Science
-		              <li> Good Will Hunting :)
-		  	     </ul>
+			   copy above and fill in`</section>
 			</section>
 		  </div>
 		</div>
