--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			   copy above and fill in`</section>
+			   copy above and fill in
 			</section>
 		  </div>
 		</div>
