--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			    <ul>
 		              <li> Bayside, NY
 			      <li> Data Analytics for Science
-		              <li> Good Will Hunting :)
+		              <li> Good Will Hunting
 		  	     </ul>
 			</section>
 		  </div>
