--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			   copy above and fill in
+				<h3>Sagar bharadwaj</h3>
+			    <ul>
+		              <li>bengaluru,india
+			      <li>Energy Science technology and policy
+		              <li>Rehna hai tere dil mein 
+		  	     </ul>
 			</section>
 		  </div>
 		</div>
