--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			   copy above and fill in
+				<h3>Manish Sainani</h3>
+			    <ul>
+		              <li>Mumbai, India
+			      <li>Energy Science, Technology and Policy
+		              <li>Dil Chahta Hai
+		  	     </ul>
 			</section>
 		  </div>
 		</div>
