--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			    <ul>
 		              <li>Your hometown
 			      <li>Your major
-		              <li>Your favorite moview
+		              <li>Your favorite movie
 		  	     </ul>
 		    </section>
 		    <section>
