Made suggested changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+
+@nikhil1007
+CMU-MS-DAS-Modern-Programming-Mini
+/
+ClassAssignmentNo1
+Public
+0
+0
+0
+Code
+Issues
+1
+Pull requests
+14
+Actions
+Projects
+Wiki
+Security
+Insights
+ClassAssignmentNo1/index.html
+@hwankyusong
+hwankyusong Update index.html
+Latest commit 577332c 3 days ago
+ History
+ 5 contributors
+@shots47s@UddinSyedZia@LiuCMU@hwankyusong@manishsainani
+60 lines (54 sloc)  1.9 KB
+
 <!doctype html>
 <html>
 	<head>
@@ -19,19 +53,25 @@
 
 	<body>
 		<div class="reveal">
-    <div class="slides">
+                  <div class="slides">
 		    <section id="titleSlide">
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Nikhil Kashyap</h3>
+			    <h3>Your name</h3>
 			    <ul>
-		        <li>Bangalore, India
-			      <li>Masters in Information Systems and Managament
-		        <li>Coming to America- Eddie Murphy
-		  	  </ul>
+		              <li>Your hometown
+			      <li>Your major
+		              <li>Your favorite moview
+		  	     </ul>
 		    </section>
 		    <section>
+					<h3>Nikhil Kashyap</h3>
+			    <ul>
+		              <li>Bangalore, India
+			      <li>Masters in Information Systems Management
+		              <li>Coming to America - Eddie Murphy
+		  	     </ul>
 			</section>
 		  </div>
 		</div>
