Figured I just need to append and not replace anything

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 		  	     </ul>
 		    </section>
 		    <section>
-					<h3>Nikhil Kashyap</h3>
-			    <ul>
-		              <li>Bangalore, India
-			      <li>Masters in Information Systems Management
-		              <li>Coming to America - Eddie Murphy
-		  	     </ul>
+			   copy above and fill in
+				 <h3>Nikhil Kashyap</h3>
+				 <ul>
+								 <li>Bangalore, India
+					 <li>Masters in Information systems management
+								 <li>Coming to America - Eddie Murphy
+						</ul>
 			</section>
 		  </div>
 		</div>
