--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 		    </section>
 		    <section>
 			   copy above and fill in
+			   <h3>Nikhil Kashyap</h3>
+			    <ul>
+		              <li>Bangalore, India
+			      <li>MISM
+		              <li>Coming to America, Eddie murphy
+		  	     </ul>
 			</section>
 		  </div>
 		</div>
