commiting before pulling updates

--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
 		  </div>
 		</div>
 
+		<body>
+			<div class="reveal">
+	                  <div class="slides">
+			    <section id="titleSlide">
+				<h2> Modern Programming for Data Analytics - Class Slides </h2>
+			    </section>
+			    <section>
+				    <h3>Your name</h3>
+				    <ul>
+			              <li>Your hometown
+				      <li>Your major
+			              <li>Your favorite moview
+			  	     </ul>
+			    </section>
+			    <section>
+					copy and paste yours
+				</section>
+			  </div>
+			</div>
+
 		<script src="dist/reveal.js"></script>
 		<script src="static/scripts/head.min.js"></script>
 		<script src="plugin/notes/notes.js"></script>
