Copied slide and pasted my information

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 		  	     </ul>
 		    </section>
 		    <section>
-			   copy above and fill in
+					<section>
+						<h3>Syed Zia Uddin</h3>
+						<ul>
+										<li>Gouripur, a small town in Bangladesh
+							<li>Mechanical Engineering
+										<li>Shawshank's Redemption
+							 </ul>
+					</section>
 			</section>
 		  </div>
 		</div>
