--- a/index.html
+++ b/index.html
@@ -24,45 +24,18 @@
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Your name</h3>
+			    <h3>Your Name</h3>
 			    <ul>
-		              <li>Your hometown
+		              <li>Your nome town
 			      <li>Your major
-		              <li>Your favorite moview
+		              <li>Favorite movie
 		  	     </ul>
 		    </section>
 		    <section>
-					<section>
-						<h3>Syed Zia Uddin</h3>
-						<ul>
-										<li>Gouripur, a small town in Bangladesh
-							<li>Mechanical Engineering
-										<li>Shawshank's Redemption
-							 </ul>
-					</section>
-			</section>
+			    copy above and fill in
+		    </section>
 		  </div>
 		</div>
-
-		<body>
-			<div class="reveal">
-	                  <div class="slides">
-			    <section id="titleSlide">
-				<h2> Modern Programming for Data Analytics - Class Slides </h2>
-			    </section>
-			    <section>
-				    <h3>Your name</h3>
-				    <ul>
-			              <li>Your hometown
-				      <li>Your major
-			              <li>Your favorite moview
-			  	     </ul>
-			    </section>
-			    <section>
-					copy and paste yours
-				</section>
-			  </div>
-			</div>
 
 		<script src="dist/reveal.js"></script>
 		<script src="static/scripts/head.min.js"></script>
