--- a/index.html
+++ b/index.html
@@ -24,27 +24,11 @@
 			<h2> Modern Programming for Data Analytics - Class Slides </h2>
 		    </section>
 		    <section>
-			    <h3>Your Name</h3>
+			    <h3>Elena Chen</h3>
 			    <ul>
-		              <li>Your home town
-			            <li>Your major
-		              <li>Your favorite movie
-		  	     </ul>
-		    </section>
-		    <section>
-				<h3>Manish Sainani</h3>
-			    <ul>
-		              <li>Mumbai, India
-			      <li>Energy Science, Technology and Policy
-		              <li>Dil Chahta Hai
-		  	     </ul>
-			</section>
-		    <section>
-          <h3>Nikhil Kashyap</h3>
-			    <ul>
-		              <li>Bangalore, India
-			      <li>Masters in Information Systems and Management
-		              <li>Coming to America - Eddie Murphy
+		              <li> Zhejiang, China
+			            <li> Data Analytics for Science
+		              <li> The Great Gatsby
 		  	     </ul>
 		    </section>
 		  </div>
